   Mar 2006: 0.2.3 Miek <miek@miek.nl>
   * gfunc.c: close files when catting them in cat().
   * crawler.c: use DIR_SEP everywhere
   * crawler.c: removed the filestack, and added files
     directly to the tree, this eliminates half a the
     MALLOCs, cutting down on rdup's memory req. 
     It is not faster (rdup is I/O bound)
   * removed the printing of directories when finished.
   * -vv now print the processed files to standard error.
     Usefull when doing a remove backup
   :Scripts:
   * Added gzip.sh + manual page
   * Added crypt.sh + manual page
   * Removed zipped/crypt feature from mirror,
     use rdup -c | crypt.sh | mirror -c 
   * Simplified yesterday.sh and hist.sh
   * Added -d switch to hist.sh
   * The default algorithm for encryption is set 
     to blowfish - if you want to change this you'll
     have to edit the scripts.

23 Feb 2006: 0.2.2 Miek <miek@miek.nl>
   -- major feature release --
   * output changes:
     - directory size is always set to zero
   * Added -F FORMAT option that allows you 
     to specify the exact output of rdup 
     (Patch from Aaron Bader)
   * Added -r: show only removed files
   * Added -m: only show new/modified files
     (Both from Aaron Bader)
   * -0 semantics changed: now only applies to 
     the internal filelist. If you want a NULL use
     '\0' in the -F FORMAT string
   * Documentation was updated to reflect the current code
   * strerror() is now also printed more often
   * add ferror() check to cat() in gfunc.c
   * renamed excl.sh to rdgrep.sh (rdup-grep)
   * various small bits: typo's, check for signals more often.


16 Feb 2006: 0.2.1 Miek <miek@miek.nl>
   * the output format was changed: 
     the path_size was added to it
   * a -c option was added, which concatenate the file's
     output to standard output. This is done to make 
     remote backups more easy. This also changes rdup's output!
   * a -s <size> option was added which will only print